ASSERTION FAILED: !m_messageReceiverMapCount under WebKit::SpeechRecognitionServer::~SpeechRecognitionServer() https://bugs.webkit.org/show_bug.cgi?id=220404

Patch by Sihui Liu <sihui_liu@appe.com> on 2021-01-07
Reviewed by Youenn Fablet.

Source/WebKit:

API test: WebKit2.SpeechRecognitionPageIsDestroyed

* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::destroySpeechRecognitionServer):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/SpeechRecognition.mm:
(-[SpeechRecognitionPermissionUIDelegate webView:createWebViewWithConfiguration:forNavigationAction:windowFeatures:]):
(-[SpeechRecognitionNavigationDelegate webView:decidePolicyForNavigationAction:preferences:decisionHandler:]):
(-[SpeechRecognitionNavigationDelegate webView:didFinishNavigation:]):
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/232834@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271238 268f45cc-cd09-0410-ab3c-d52691b4dbfc